[package]
name = "rag"
version = "0.1.0"
authors = ["Lachlan McCalman <lachlan@gradientinstitute.org>"]
edition = "2018"

[dependencies]
log = "0.4.8"
simplelog = "0.7.4"
anyhow = "1.0"
dialoguer = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
pest = "2.0"
pest_derive = "2.0"
num_enum = "0.4.2"
tui = "0.8"
termion = "1.5"
crossbeam = "0.7.3"
